# hyper-gomoku-cli

./: README.md  pyproject.toml
src/gomoku/: __init__.py  board.py  cli.py  commentary.py  config.py  controller.py  game.py  skills.py
src/gomoku/ai/: __init__.py  opponent.py  personas.py  search.py
src/gomoku/ui/: __init__.py  dialog.py  input.py  overlay.py  renderer.py  status_box.py  text_utils.py
