[project]
name = "gomoku"
version = "0.1.0"
description = "Terminal-based Gomoku game with special skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Gomoku Dev Team" }
]
keywords = ["gomoku", "tui", "game"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "readchar>=4.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3"]

